# aliyun-oss-cli.rs

./: .gitignore  Cargo.toml  README.md  build.sh  config.yaml.example
src/: config.rs  main.rs  utils.rs
src/cmd/: delete.rs  init.rs  list.rs  mod.rs  preview.rs  sign.rs  upload.rs
src/oss/: client.rs  error.rs  mod.rs  signature.rs
